--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,7 +10,16 @@ RUN apk update && apk upgrade
 
 # copy project
 COPY . /src/mantenedor/
-RUN npm install
+
+# --no-cache: download package index on-the-fly, no need to cleanup afterwards
+# --virtual: bundle packages, remove whole bundle at once, when done
+RUN apk --no-cache --virtual build-dependencies add \
+    python \
+    make \
+    g++ \
+    && npm install \
+    && apk del build-dependencies
+
 # EXPOSE 3000
 RUN npm run build
 RUN npm run start
