--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,13 +1,6 @@
 # pull official base image
 FROM node:13.12.0-alpine
 
-RUN apk add --no-cache --virtual .gyp \
-        python \
-        make \
-        g++ \
-    && npm install \
-    && apk del .gyp
-
 # set work directory
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
@@ -18,14 +11,14 @@ RUN apk update && apk upgrade
 # copy project
 COPY . /src/mantenedor/
 
-# # --no-cache: download package index on-the-fly, no need to cleanup afterwards
-# # --virtual: bundle packages, remove whole bundle at once, when done
-# RUN apk --no-cache --virtual build-dependencies add \
-#     python \
-#     make \
-#     g++ \
-#     && npm install \
-#     && apk del build-dependencies
+# --no-cache: download package index on-the-fly, no need to cleanup afterwards
+# --virtual: bundle packages, remove whole bundle at once, when done
+RUN apk --no-cache --virtual build-dependencies add \
+    python \
+    make \
+    g++ \
+    && npm install \
+    && apk del build-dependencies
 
 # EXPOSE 3000
 RUN npm run build
