--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,11 +5,9 @@ FROM node:13.12.0-alpine
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 
-# install dependencies
-RUN apk update && apk upgrade
 
-# copy project
-COPY . /src/mantenedor/
+# install dependencies
+# RUN apk update && apk upgrade
 
 # --no-cache: download package index on-the-fly, no need to cleanup afterwards
 # --virtual: bundle packages, remove whole bundle at once, when done
@@ -19,6 +17,13 @@ RUN apk --no-cache --virtual build-dependencies add \
     g++ \
     && npm install \
     && apk del build-dependencies
+
+
+
+# copy project
+COPY . /src/mantenedor/
+
+
 
 # EXPOSE 3000
 RUN npm run build
