--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,7 +8,8 @@ WORKDIR /src/mantenedor
 
 # install dependencies
 RUN apk update && apk upgrade
-RUN sudo apk add python make g++
+RUN apk add --update python make g++\
+   && rm -rf /var/cache/apk/*
 RUN npm install
 RUN npm install -g node-gyp
 
