--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,14 +1,16 @@
 # pull official base image
 FROM node:13.12.0-alpine
 
+RUN apk update && apk add python make g++ && rm -rf /var/cache/apk/*
+
 # set work directory
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 
 
 # install dependencies
-RUN apk update && apk upgrade
-RUN apk add --update python make g++ && rm -rf /var/cache/apk/*
+# RUN apk update && apk upgrade
+
 RUN npm install
 RUN npm install -g node-gyp
 
