--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,7 +1,7 @@
 # pull official base image
 FROM node:13.12.0-alpine
 
-RUN apk update && apk add python make g++ && rm -rf /var/cache/apk/*
+# RUN apk update && apk add python make g++ && rm -rf /var/cache/apk/*
 
 # set work directory
 RUN mkdir -p /src/mantenedor/
@@ -26,5 +26,4 @@ RUN npm install
 
 # EXPOSE 3000
 RUN npm run build
-RUN npm run start
 ENV HOST 0.0.0.0
