--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,22 +7,22 @@ FROM node:13.12.0-alpine
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 
-# install dependencies
-RUN apk update && apk upgrade
-
 # copy project
 COPY . /src/mantenedor/
-RUN npm install
-# RUN npm install -g node-gyp
 
-# # --no-cache: download package index on-the-fly, no need to cleanup afterwards
-# # --virtual: bundle packages, remove whole bundle at once, when done
-# RUN apk --no-cache --virtual build-dependencies add \
-#     python \
-#     make \
-#     g++ \
-#     && npm install \
-#     && apk del build-dependencies
+# install dependencies
+# RUN apk update && apk upgrade
+
+# --no-cache: download package index on-the-fly, no need to cleanup afterwards
+# --virtual: bundle packages, remove whole bundle at once, when done
+RUN apk --no-cache --update --virtual build-dependencies add \
+    python \
+    make \
+    g++ \
+    && npm install \
+    && apk del build-dependencies
+
+# RUN npm install -g node-gyp
 
 # EXPOSE 3000
 RUN npm run build
