--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -25,6 +25,5 @@ RUN apk --no-cache --update --virtual build-dependencies add \
 # RUN npm install -g node-gyp
 
 # EXPOSE 3000
-RUN npm run build
-RUN npm run start
+RUN npm run dev
 ENV HOST 0.0.0.0
