--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,29 +1,51 @@
 # pull official base image
-FROM node:13.12.0-alpine
-
-# RUN apk update && apk add python make g++ && rm -rf /var/cache/apk/*
+FROM node:13.12.0
 
 # set work directory
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 
-# copy project
-COPY . /src/mantenedor/
-
 # install dependencies
 # RUN apk update && apk upgrade
 
-# --no-cache: download package index on-the-fly, no need to cleanup afterwards
-# --virtual: bundle packages, remove whole bundle at once, when done
-RUN apk --no-cache --update --virtual build-dependencies add \
-    python \
-    make \
-    g++ \
-    && npm install \
-    && apk del build-dependencies
-
-# RUN npm install -g node-gyp
-
-# EXPOSE 3000
-RUN npm run dev
+# copy project
+COPY . /src/mantenedor/
+RUN npm install
+EXPOSE 3000
+CMD npm run dev
 ENV HOST 0.0.0.0
+
+
+
+
+
+
+# # pull official base image
+# FROM node:13.12.0-alpine
+
+# # RUN apk update && apk add python make g++ && rm -rf /var/cache/apk/*
+
+# # set work directory
+# RUN mkdir -p /src/mantenedor/
+# WORKDIR /src/mantenedor
+
+# # copy project
+# COPY . /src/mantenedor/
+
+# # install dependencies
+# # RUN apk update && apk upgrade
+
+# # --no-cache: download package index on-the-fly, no need to cleanup afterwards
+# # --virtual: bundle packages, remove whole bundle at once, when done
+# RUN apk --no-cache --update --virtual build-dependencies add \
+#     python \
+#     make \
+#     g++ \
+#     && npm install \
+#     && apk del build-dependencies
+
+# # RUN npm install -g node-gyp
+
+# # EXPOSE 3000
+# RUN npm run dev
+# ENV HOST 0.0.0.0
