--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,12 +5,9 @@ FROM node:13.12.0
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 
-# install dependencies
-# RUN apk update && apk upgrade
-
 # copy project
 COPY . /src/mantenedor/
-RUN npm update
+# RUN npm update
 RUN npm install
 # RUN npm run build
 # RUN npm run start
