--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "cookieparser": "^0.1.0",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "qrcode.vue": "^1.7.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
