map in component

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.0.0",
     "nuxt-leaflet": "0.0.21",
     "qrcode.vue": "^1.7.0",
+    "vue-no-ssr": "^1.1.1",
     "vue2-leaflet": "^2.5.2"
   },
   "devDependencies": {
