--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,22 +3,28 @@ FROM node:13.12.0
 
 # set work directory
 RUN mkdir -p /src/mantenedor/
-COPY . /src/mantenedor
-WORKDIR /src/mantenedor
+RUN ls -la /src/mantenedor
+COPY . /src/mantenedor/
+RUN ls -la /src/mantenedor
+WORKDIR /src/mantenedor/
+RUN ls -la
 
 COPY package.json /src/mantenedor
 #RUN npm rebuild #Debe ejecutarse la primera vez después de cambiar la version de node
 
+RUN ls -la
 RUN npm install
-
+RUN ls -la
 ENV NODE_ENV=production
-
+RUN ls -la
 COPY . /src/mantenedor
+RUN ls -la
 RUN npm run build
+RUN ls -la
 # RUN npm run start
 # RUN npm install js-cookie --save
 # RUN npm install cookieparser --save
-# EXPOSE 3000
+EXPOSE 3000
 ENV HOST 0.0.0.0
 
 
