--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,40 +1,38 @@
-# pull official base image
+# # pull official base image
+# FROM node:13.12.0
+# ENV NODE_ENV=production
+# # set work directory
+# RUN mkdir -p /src/mantenedor/
+# # RUN ls -la /src/mantenedor
+# WORKDIR /src/mantenedor/
+# # RUN ls -la
+# RUN npm cache clean --force
+# COPY package.json ./
+# #RUN npm rebuild #Debe ejecutarse la primera vez después de cambiar la version de node
+# RUN ls -la
+# RUN npm install
+# RUN ls -la
+# COPY . .
+# RUN ls -la
+# # COPY . /src/mantenedor
+# # RUN ls -la
+# RUN npm run build
+# RUN ls -la ./node_modules
+# # RUN npm run start
+# # RUN npm install js-cookie --save
+# # RUN npm install cookieparser --save
+# EXPOSE 3000
+# ENV HOST 0.0.0.0
+
+
+
 FROM node:13.12.0
-
-ENV NODE_ENV=production
-
-# set work directory
 RUN mkdir -p /src/mantenedor/
-# RUN ls -la /src/mantenedor
-
-WORKDIR /src/mantenedor/
-# RUN ls -la
-RUN npm cache clean --force
-
-COPY package.json ./
-#RUN npm rebuild #Debe ejecutarse la primera vez después de cambiar la version de node
-
-RUN ls -la
+WORKDIR /src/mantenedor
+COPY . /src/mantenedor/
 RUN npm install
-RUN ls -la
-
-COPY . .
-# RUN ls -la /src/mantenedor
-
-RUN ls -la
-# COPY . /src/mantenedor
-# RUN ls -la
-RUN npm run build
-RUN ls -la ./node_modules
-# RUN npm run start
-# RUN npm install js-cookie --save
-# RUN npm install cookieparser --save
 EXPOSE 3000
 ENV HOST 0.0.0.0
-
-
-
-
 
 
 
