--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -31,6 +31,7 @@ RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 COPY . /src/mantenedor/
 RUN npm install
+RUN npm build
 EXPOSE 80
 ENV HOST 0.0.0.0
 
