--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -33,7 +33,10 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm build
-ENV HOST 0.0.0.0
+# EXPOSE 3000
+# ENV HOST 0.0.0.0
+ENV NUXT_HOST=0.0.0.0
+ENV NUXT_PORT=80
 
 
 
