--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -30,7 +30,7 @@ FROM node:13.12.0
 RUN mkdir -p /src/mantenedor/
 WORKDIR /src/mantenedor
 COPY package*.json ./
-RUN npm install
+RUN npm install && npm cache clean --force
 COPY . .
 RUN npm build
 # EXPOSE 3000
