--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/proxy": "^2.0.0",
     "cookieparser": "^0.1.0",
+    "http-proxy": "^1.18.1",
     "js-cookie": "^2.2.1",
     "leaflet": "^1.6.0",
     "nuxt": "^2.0.0",
